<resources>
    <string name="app_name">NoteApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">save</string>
    <string name="please_type_your_note">Please type your note</string>
    <string name="title_profile">Profile</string>
    <string name="skip">SKIP</string>
    <string name="desc">Description Description Description Description Description Description</string>
    <string name="login">LOGIN</string>
    <string name="alima">Alima</string>
    <string name="clear_prefs">Exit</string>
    <string name="task">Task</string>
    <string name="date">Date</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_element">Delete Element"</string>
    <string name="sure">Are you sure you want to delete the note?"</string>
    <string name="cont">Continue</string>
    <string name="confirm">Confirm</string>
    <string name="starting_point">00:59</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>